force-app/main/default/objects/KHotel__c/KHotel__c.object-meta.xml
<CustomObject>
    <label>KHotel</label>
    <nameField>
        <label>HotelName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KHotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>