force-app/main/default/objects/KHotel__c/fields/DaysProfit__c.field-meta.xml
<CustomField>
    <fullName>DaysProfit__c</fullName>
    <label>DaysProfit</label>
    <summarizedField>KRoom__c.Tariff__c</summarizedField>
    <summaryForeignKey>KRoom__c.KHotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>