force-app/main/default/objects/KHotel__c/fields/Dining__c.field-meta.xml
<CustomField>
    <fullName>Dining__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dining</label>
    <referenceTo>Dining__c</referenceTo>
    <relationshipLabel>KHotels</relationshipLabel>
    <relationshipName>KHotels</relationshipName>
    <type>Lookup</type>
</CustomField>