force-app/main/default/objects/KHotel__c/fields/RoomCount__c.field-meta.xml
<CustomField>
    <fullName>RoomCount__c</fullName>
    <label>RoomCount</label>
    <summaryForeignKey>KRoom__c.KHotel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>