force-app/main/default/objects/KHotel__c/fields/StreetAdress__c.field-meta.xml
<CustomField>
    <fullName>StreetAdress__c</fullName>
    <label>StreetAdress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>