force-app/main/default/objects/KHotel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>StreetAdress__c</columns>
    <columns>DaysProfit__c</columns>
    <columns>Dining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>